<resources>
    <string name="app_name">Epicuri POS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_clear">Reset</string>
    <string name="menu_edittablelayout">Edit Table Layout</string>
    <string name="menu_editfloorplanlayout">Edit Floorplan Layout</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_kitchen">On-Screen Display</string>
    <string name="menu_businessintelligence">Business Intelligence</string>
    <string name="menu_news">News</string>
    <string name="menu_loginmanager">Login Manager</string>
    <string name="menu_seatParty">Seat Party</string>
    <string name="menu_viewSessionForParty">View Tab</string>
    <string name="menu_createSessionForParty">Start Tab</string>
    <string name="menu_partyLeft">Remove Party</string>
    <string name="menu_nonArrival">Not Arrived</string>
    <string name="menu_closeSession">Close Session</string>
    <string name="menu_cancelTakeaway">Cancel Takeaway</string>
    <string name="menu_forceCloseSession">Force Close</string>
    <string name="menu_submitCollectionOrder">Submit order</string>
    <string name="menu_editTakeaway">Edit Takeaway Details</string>
    <string name="menu_closeTakeaway">Close Takeaway</string>
    <string name="menu_forceCloseTakeaway">Force Close Takeaway</string>
    <string name="menu_edit_party_details">Edit Party Details</string>
    <string name="menu_edit_party">Edit Party</string>
    <string name="title_activity_hub">Epicuri Waiter</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_table">Table Detail</string>
    <string name="title_activity_ordering">Ordering</string>
    <string name="title_activity_takeaway">Takeaway Detail</string>
    <string name="title_activity_orders">Orders Received</string>
    <string name="title_activity_tableedit">Edit Table Layout</string>
    <string name="title_activity_menumanager">Menu Manager</string>
    <string name="title_activity_floorplanedit">Edit Floorplan Layout</string>
    <string name="title_activity_reservations">Reservations</string>
    <string name="title_activity_submitorder">Submit Orders</string>
    <string name="tab_orders">Orders</string>
    <string name="tab_payments">Payments</string>
    <string name="orderQuantity">%1$d dishes ordered</string>
    <string name="orderQuantityBillSplit">%1$d items ordered</string>
    <string name="newParty_nameHint">Name of the party</string>
    <string name="newParty_title">Receive a new party</string>
    <string name="newParty_numberInParty">Number in party</string>
    <string name="newParty_epicuriId">Epicuri ID</string>
    <string name="newParty_add">Add party</string>
    <string name="newParty_cancel">Cancel</string>
    <string name="deleteReservation">Delete</string>
    <string name="saveReservation">Save changes</string>
    <string name="discardReservation">Discard changes</string>
    <string name="requestBill">Request Bill</string>
    <string name="payBill">Mark Bill Paid</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="logout_title">Log Out?</string>
    <string name="logout_prompt">This will sign this device out and require a username and password to log back in.  Are you sure?</string>
    <string name="logout_positive">Log Out</string>
    <string name="logout_negative">Stay Logged In</string>
    <string name="lockscreen_loggedInAs">CURRENTLY LOGGED IN AS %s</string>
    <string name="address_title">Address</string>
    <string name="address1_hint">Street</string>
    <string name="address2_hint">Area</string>
    <string name="address3_hint">City</string>
    <string name="address4_hint">Postcode</string>
    <string name="closeSession_title">Close Session?</string>
    <string name="closeSession_message">This will close the table and make it available for the next guest</string>
    <string name="closeSession_close">Close session</string>
    <string name="closeSession_leave">Leave session open</string>
    <string name="forceCloseSession_close">Force close session</string>
    <string name="forceCloseSession_message">This will force close the table and mark the Epicuri users as not having paid</string>
    <string name="closeTab_title">Close Tab?</string>
    <string name="closeTab_message">This will close the tab</string>
    <string name="closeTab_close">Force Close</string>
    <string name="closeTab_forceClose">Force Close</string>
    <string name="closeTab_leave">Leave Open</string>
    <string name="forceCloseTab_message">This will force close the table and mark the Epicuri users as not having paid</string>
    <string name="forceCloseTakeaway_title">Close takeaway</string>
    <string name="forceCloseTakeaway_message">This will close the takeaway</string>
    <string name="forceCloseTakeaway_leave">Leave takeaway open</string>
    <string name="forceCloseTakeaway_close">Close takeaway</string>
    <string name="forceCloseTakeaway_closeUnfulfilled">Close (unfulfilled)</string>
    <string name="partyLeft_title">Remove Party</string>
    <string name="partyLeft_prompt">This will mark the party as having left the restaurant</string>
    <string name="partyLeft_positive">Remove Party</string>
    <string name="partyLeft_negative">Cancel</string>
    <string name="layoutChoice_cancel">Cancel</string>
    <string name="layoutChoice_useLayout">Use Layout</string>
    <string name="layoutChoice_editLayout">Edit Layout</string>
    <string name="title_activity_floorplanmanager">Floorplan Manager</string>
    <string name="newtablename_title">Table Name</string>
    <string name="newtableshape_title">Table Shape</string>
    <string name="menu_applyToFloor">Apply To Floor</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save_as_new_layout">Save As New Layout</string>
    <string name="savelayout_create">This will save the layout.  Please enter a name for this layout</string>
    <string name="savelayout_overwrite">This will save the layout.  Do you want to overwrite the existing layout or create a new one?</string>
    <string name="savecurrentlayout_overwrite">This will save the active layout.  Do you want to overwrite the active layout or create a new template?</string>
    <string name="collectionNotes_hint">Enter any notes here</string>
    <string name="collectionNotes_title">Notes</string>
    <string name="collectionTime_title">Delivery/Collection Time</string>
    <string name="collectionRadioDelivery_title">Delivery</string>
    <string name="collectionRadioCollection_title">Collection</string>
    <string name="customerNumber">Phone Number</string>
    <string name="customerName">Customer Name</string>
    <string name="menu_addItems">Add Items</string>
    <string name="menu_search">Search</string>
    <string name="discard">Discard</string>
    <string name="done">Done</string>
    <string name="twitteraddress">https://mobile.twitter.com/EpicuriNews</string>
    <string name="menuitemedit_name_hint">Name as it appears on menu</string>
    <string name="menuitem_edit_warning">N.B. Editing this menuitem will edit it for ALL menus in which it is placed</string>
    <string name="aboutLibraries">This app uses the following libraries:\n\n * ViewPageIndicator (http://viewpagerindicator.com/)\n * ButterKnife (http://jakewharton.github.io/butterknife/)\n * Drag-sort-listview (https://github.com/bauerca/drag-sort-listview)\n * Volley (https://android.googlesource.com/platform/frameworks/volley)\n * Joda Money (http://www.joda.org/joda-money/)</string>
    <string name="menu_refresh">Refresh</string>
    <string name="webservicetask_alertbody">Saving changes</string>
    <string name="webservicetask_alerttitle">Please wait</string>
    <string name="menu_new_item">New Item</string>
    <string name="menu_choose_menuitems">Assign Menu Items</string>
    <string name="sort_menuitems">Sort A-Z</string>
    <string name="cancel">Cancel</string>
    <string name="takeaway_additems">Add Items</string>
    <string name="takeaway_save">Save Details</string>
    <string name="takeaway_date_cannot_be_in_the_past">Date cannot be in the past</string>
    <string name="takeaway_lookupcustomer">Lookup</string>
    <string name="takeaway_noepicuriaccount">No Epicuri Account Set</string>
    <string name="acceptTakeaway_title">Approve Takeaway</string>
    <string name="acceptTakeaway_message">Warnings exist! Approve the booking by \"%1$s\" on %2$s anyway?</string>
    <string name="deleteMenuMessage">Warning: This will permanently delete the menu. You can archive it instead by making it inactive. Are you sure you want to delete?</string>
    <string name="delete_menuitem_prompt">Delete %s from this restaurant and ALL menus?</string>
    <string name="defaultcourses">Please choose the default course to apply (per service)</string>
    <string name="submitWarnings">The following warnings were found. Continue anyway?</string>
    <string name="takeawaylockedit_title">Takeaway edited within lock window</string>
    <string name="takeawaylockedit_message">Order is due within %d minutes, please notify the kitchen of this change.</string>
    <string name="takeawaylockcancel_title">Takeaway cancelled within lock window</string>
    <string name="takeawaylockcancel_message">Order was due within %d minutes, please notify the kitchen of this cancellation</string>
    <string name="failedJobs">%d failed jobs</string>
    <string name="endofday_warning">NOTE!\n\nThis should only be used once service is finished for the day, use it to tidy these unfinished sessions ready for the next service.\n - Unpaid sessions will be marked as a noshow / unpaid and a black mark will be applied to the guests involved.\n - All past bookings pending approval will be marked as rejected</string>
    <string name="cancel_reservation">Are you sure you want to cancel the reservation for \"%1$s\" for %2$s?</string>
    <string name="noshow_title">Mark Reservation As A No-Show</string>
    <string name="noshow_body">Are you sure you want to mark \"%s\" as a no-show?</string>
    <string name="noshow_action">Mark as no-show</string>
    <string name="noshow_cancel">Cancel</string>
    <string name="menu_menueditor_edit">Edit</string>
    <string name="menu_menueditor_manage_items">Manage Categories</string>
    <string name="menu_menueditor_delete">Delete</string>
    <string name="menu_menueditor_remove">Remove</string>
    <string name="menu_menueditor_set_as_takeaway_menu">Mark As Takeaway</string>
    <string name="menu_menumanager_new_menu">New Menu</string>
    <string name="menu_menumanager_manage_items">Manage Items</string>
    <string name="menu_menumanager_manage_modifiers">Manage Modifiers</string>
    <string name="menuedit_empty">No menu items found\nUse the menu to add new menu items</string>
    <string name="menuedit_loading">Loading&#8230;</string>
    <string name="orphaned_label">Only show items not assigned to a menu</string>
    <string name="acceptReservation_title">Accept Reservation</string>
    <string name="menu_perGuest">Per Guest</string>
    <string name="menu_addPayment">Add Payment</string>
    <string name="menu_addDiscount">Add Adjustment</string>
    <string name="newParty_service">Service</string>
    <string name="all_type">ALL</string>
    <string name="food_type">FOOD</string>
    <string name="drink_type">DRINK</string>
    <string name="other_type">OTHER</string>
    <string name="food_type_title">Apply to Item Type</string>
    <string name="close_takeaway">Close takeaway</string>
    <string name="asap">All together</string>
    <string name="defaultCourses">Default courses</string>
    <string name="omit_from_checks">Omit from checks</string>
</resources>