<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/abc_dialog_padding_material">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/partyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:hint="@string/newParty_nameHint"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/newParty_numberInParty"
        style="@style/TextAppearance.Epicuri.FormCaption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/numberInParty_1"
            style="@style/Epicuri.RadioButton"
            android:text="1" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/numberInParty_2"
            style="@style/Epicuri.RadioButton"
            android:text="2" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/numberInParty_3"
            style="@style/Epicuri.RadioButton"
            android:text="3" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/numberInParty_4"
            style="@style/Epicuri.RadioButton"
            android:text="4" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/numberInParty_5"
            style="@style/Epicuri.RadioButton"
            android:text="5" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/numberInParty_6"
            style="@style/Epicuri.RadioButton"
            android:text="6" />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/numberInParty_other"
            style="@style/Epicuri.RadioButton"
            android:text="Other:" />

        <EditText
            android:id="@+id/numberInParty_other_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Other"
            android:inputType="number"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/newParty_epicuriId"
        style="@style/TextAppearance.Epicuri.FormCaption" />

    <Spinner
        android:id="@+id/customerChooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/newParty_service"
        android:id="@+id/serviceChooser_label"
        android:visibility="gone"
        style="@style/TextAppearance.Epicuri.FormCaption" />

    <Spinner
        android:id="@+id/serviceChooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:minHeight="48dp"
        android:backgroundTint="@color/black"/>

</LinearLayout>