<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newParty_epicuriId"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/customer_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="No Epicuri Account Set"
                android:paddingLeft="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic" />

            <Button
                android:id="@+id/customerlookup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lookup" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newParty_nameHint"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            style="@style/TextAppearance.AppCompat.Small"/>

        <EditText
            android:id="@+id/phonenumber_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="e.g. 01904462273"
            android:inputType="phone"
            android:minHeight="48dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="Email"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/omitCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/omit_from_checks"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/newParty_numberInParty"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <NumberPicker
            android:id="@+id/numberInParty_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/newParty_numberInParty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Reservation date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/resdate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/restime_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/pendingreason_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pending reason"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/pendingreason_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:visibility="gone" />

        <TextView
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Notes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/notes_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:minHeight="48dp" />
    </LinearLayout>

</ScrollView>